Fixed Alignment of Calendar Days

--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -65,6 +65,7 @@
 .calendar {
   margin-bottom: 1rem;
   width: 100%;
+  min-width: 60%;
   z-index: -1;
 }
 
